@@ -49,4 +49,21 @@ if( Rcpp:::capabilities()[["variadic templates"]] ){
 	}
 }
 
+test.ExpressionVector.parse <- function( ){
+	funx <- cfunction(signature(), '
+	ExpressionVector code( "local( { y <- sample(1:10); sort(y) })" ) ;
+	return code ;', 
+	Rcpp=TRUE, verbose=FALSE, includes = "using namespace Rcpp;" )
+	code <- funx()
+	results <- eval( code )
+	checkEquals( results, 1:10, msg = "ExpressionVector parsing" )
+}
 
+test.ExpressionVector.parse.error <- function(){
+	funx <- cfunction(signature(), '
+	ExpressionVector code( "rnorm(" ) ;
+	return code ;', 
+	Rcpp=TRUE, verbose=FALSE, includes = "using namespace Rcpp;" )
+	checkException( funx(), msg = "parse error" )
+	
+}
