@@ -1,5 +1,11 @@
 2010-01-16  Romain Francois <francoisromain@free.fr>
 
+	* src/Rcpp/ExpressionVector.h: ExpressionVector gains a
+	constructor ExpressionVector( const std::string& ) that 
+	parses the string as R code
+	* inst/unitTests/runit.ExpressionVector.R: added unit tests
+	to cover the new constructor
+
 	* src/Rcpp/Environment.h : the Rcpp namespace is cached because
 	we use it in many places and retrieving it is an "expensive"
 	operation that requires a round trip to the R side
